src/pr8/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
